--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +24,48 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Markazi Text', serif;
+  color: #495e57;
+  margin-bottom: 0.5rem;
+}
+
+p, span {
+  font-family: 'Karla', sans-serif;
+  font-size: 1rem;
+  line-height: 1.3;
+  color: #333;
+}
+
+.top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 20%;
+  background-color: #ffffff;
+}
+
+.logo-container img {
+  height: 50px;
+}
+
+
+/* Button Primary */
+.button-primary {
+  background-color: #f4ce14;
+  width: 200px;
+  height: 60px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: 'Karla', sans-serif;
+}
+
+.button-primary:active {
+  background-color: #FBDABB;
 }
